crates/toml_edit/tests/snapshots/invalid/float/arabic-zero-02.stderr
TOML parse error at line 1, column 18
  |
1 | arabic-zero-02 = ٠
  |                  ^^
string values must be quoted, expected literal string
